--- a/src/skeleton.css
+++ b/src/skeleton.css
@@ -97,94 +97,155 @@ body{
 
 
 
-/* right hand tasks display and interactions popup*/
-        #taskAndListContainer{
+/*Right hand window for displaying emails*/
+        #emailDisplayContainer{
             height: 100%;
             width: 85%;
             background-position: center top;
+            justify-content: center;
+            align-items: center;
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
-            align-items:flex-end;
+
         }
-
-
-
-        #taskPopoutBoxContainer, #taskInfoPopoutContainer{
-            height: 550pt;
-            width: 300pt;
-            border-radius: 4%;
-            margin-left: 50pt;
-            justify-content: end;
-            align-items: center;
-            margin-bottom: 3%;;
-        }
-
-        #taskPopoutBox, #taskInfoPopoutBox{
-        height: 100%;
-        width: 100%;
-            background-color: white;
-            border: 1pt #d8d8d8 inset;
-            border-radius: 4%;
+        #emailDisplayFlexContainer{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            height: 80%;
+            width: 80%;
+            border: solid 1pt black;
+            gap: 5pt;
         }
-
-        .listDisplayTaskbar, #taskTitleDisplayBox {
-            width: 100%;
-            height: 10%;
-            display: flex;
-            justify-content: space-between;
-            margin: 0;
-        }
-        #listNameDisplay, #taskTitleDisplay{
-            display: flex;
-            align-items: center;
-            padding: 5pt;
-        }
-        .listExitBtn{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            
-        }
-
-        #taskDisplayContainer, #taskInfoDisplayContainer{
-            display: flex;
-            flex-direction: column;
-            overflow: auto;
-            background-color: whitesmoke;
-            height: 90%;
-            width: 100%;
-            margin: 0;
-            
-        }
-
-        #taskFlexContainer{
+        #emailFlexContainer{
             display: flex;
             height: fit-content;
+            width: 100%;
             align-items: center;
             background-color: whitesmoke;
+            cursor: pointer;
             border: none;
             gap:2%;
             font-size: 13pt;
         }
-        .taskCrossBtn{
-            height: 50%;
-            border-radius: 15px;
-            margin-left: 5%;
-            padding: 6pt;
-            border: 1pt, black, solid;
+        #emailFlexContainer:hover{
+            border: inset 1pt RGB(255, 202, 6);
         }
 
-        .task{
+
+        .emailFrom{
             display: flex;
             margin: 0;
             padding: 5pt;
-            width: 100%;
+            width: 30%;
             
         }
+        .emailTitle{
+            display: flex;
+            margin: 0;
+            padding: 5pt;
+            width: 80%;
+            
+        }
+
+
+/*open email popout*/
+/*Add List popout Box*/
+#emailPopoutBoxContainer{
+    position: fixed;
+    background-color: rgba(0, 0 , 0, 0.5);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+}
+
+
+#emailPopoutBoxFlexContainer{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#emailPopoutBox{
+    height: 300pt;
+    width: 500pt;
+
+    background-color: white;
+    margin-left: 7%;
+    margin-bottom: 4%;
+    border: 1pt #d8d8d8 inset;
+    border-radius: 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: top;
+
+}
+
+#emailDisplayTaskbar{
+    display: flex;
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    
+}
+
+    #emailNameDisplay{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18pt;
+        font-weight: bold;
+        width: 95%;
+    }
+#emailBodyInputContainer{
+    display: flex;
+    padding-top: 5pt;
+    justify-content: space-between;
+    height: 80%;
+    width: 100%;
+}
+#emailBody{
+    
+    font-size: 15pt;
+    margin-left: 2pt;
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
+/*
+#addListPopupBtn{
+    border-radius: 15px;
+    background-color: white;
+    border: 1pt black solid;
+    width: 10%;
+    height: 100%;
+    margin: 0;
+    margin-right: 3pt;
+}
+*/
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         /*Crossout achieved with linear gradient, shamelessly took this*/
         .crossed{
@@ -275,59 +336,3 @@ body{
             font-weight: bold;
         }
 
-/*Add List popout Box*/
-#addListPopoutBoxContainer{
-    position: fixed;
-    background-color: rgba(0, 0 , 0, 0.5);
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 1;
-}
-
-
-#addListPopoutBoxFlexContainer{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-#addListPopoutBox{
-    height: 100pt;
-    width: 300pt;
-    background-color: white;
-    margin-left: 7%;
-    margin-bottom: 4%;
-    border: 1pt #d8d8d8 inset;
-    border-radius: 4%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: top;
-    gap: 30%;
-}
-#addListInputContainer{
-    display: flex;
-    padding-top: 5pt;
-    justify-content: space-between;
-    height: 30%;
-    width: 100%;
-}
-#userListInput{
-    border-radius: 15px;
-    border: 1pt black solid;
-    margin-left: 2pt;
-    width: 85%;
-}
-#addListPopupBtn{
-    border-radius: 15px;
-    background-color: white;
-    border: 1pt black solid;
-    width: 10%;
-    height: 100%;
-    margin: 0;
-    margin-right: 3pt;
-}
