--- a/src/skeleton.css
+++ b/src/skeleton.css
@@ -256,117 +256,99 @@ body{
     background: transparent; /* make scrollbar transparent */
 }
 
-/*
-#addListPopupBtn{
-    border-radius: 15px;
-    background-color: white;
-    border: 1pt black solid;
-    width: 10%;
-    height: 100%;
-    margin: 0;
-    margin-right: 3pt;
+
+/*Login screen popup*/
+
+#loginScreenBackground{
+    position: fixed;
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
 }
-*/
+
+#loginScreenBackgroundContainer{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#loginPopupBox{
+    height: 250pt;
+    width: 500pt;
+    background-color: white;
+    border: 1pt #d8d8d8 inset;
+    border-radius: 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: top;
+
+}
+
+#loginHeaderContainer{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    font-family: 'ucf';
+    font-size: 30pt;
+
+}
+#loginHeader{
+    margin-left: 2%;
+}
+
+#inputsFlexContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    width: 50%;
+    gap: 10%;
+    font-family: 'ucf';
+    font-size: 15pt;
+}
+
+
+
+#userNameFlexContainer, #passwordFlexContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 5pt;
+}
+
+#userNameInput, #passwordInput{
+    width: 100%;
+    padding: 5pt;
+    font-family: sans-serif;
+    font-size: 15pt;
+}
+
+#loginBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10pt;
+    background-color: black;
+    font-family: 'ucf';
+    font-size: 12pt;
+    border: none;
+    cursor: pointer;
+    padding: 12pt 32pt;
+    width: fit-content;
+    color: RGB(255, 202, 6);
+} 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-        /*Crossout achieved with linear gradient, shamelessly took this*/
-        .crossed{
-            background: linear-gradient(180deg, 
-                rgba(0,0,0,0) calc(50% - 1px), 
-                rgba(192,192,192,1) calc(50%), 
-                rgba(0,0,0,0) calc(50% + 1px)
-                );
-        }
-
-        .crossedColors{
-            color: grey;
-
-        }
-        .deleteTaskBtn, .crossedTaskBtn{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 8px;
-            width: 20px;
-            height: 20px;
-            font-size: 11pt;
-            background-color: grey;
-            color: white;
-            border: none;
-        }
-        .deleteTaskBtn{
-            margin: 0;
-        }
-        .crossedTaskBtn{
-            font-size: 14pt;
-        }
-
-        #inputContainer{
-            display: flex;
-            gap: 4%;
-            padding-top: 5pt;
-            height: 10%;
-            width: 100%;
-        }
-
-        #userTaskInput{
-            border-radius: 15px;
-            border: 1pt blue solid;
-            margin-left: 2pt;
-            height: 60%;
-            width: 85%;
-        }
-
-        #addTaskBtn{
-            border-radius: 15px;
-            background-color: white;
-            border: 1pt blue solid;
-            height: 70%;
-            width: 10%;
-            margin: 0;
-            margin-right: 3pt;
-        }
-
-/*Info and Display Box*/
-        #taskInfoDisplayContainer{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        #dueDateDisplayContainer{
-           height: 20%;
-           width: 100%;
-        }
-            #changeDueDateBtn{
-                height: 30pt;
-                width: pt;;
-            }
-        
-        #descriptionDisplayContainer{
-            height: 80%;
-        }
-            #descriptionDisplay, #descriptionDisplayInput{
-                display: flex;
-                justify-content: top;
-                align-items: top;
-                overflow-wrap: break-word;
-                width: 100%;
-                height: 95%;
-            }
-        .infoTitle{
-            font-size: 15pt;
-            font-weight: bold;
-        }
 
